plugins {
    id 'java-library'
    id 'maven-publish'

}

jar {
    //dependsOn(':ShipsCore:jar')
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    try {
        api project(":TranslateCore")
    } catch (UnknownProjectException ignored) {
        System.out.println("Could not find subModule of ShipsCore, using jit instead")
        api 'com.github.Minecraft-Ships:TranslateCore:master-SNAPSHOT'
    }
    compileOnly 'org.jetbrains:annotations:20.1.0'
}

group = 'org.ships'
version = '1.0-SNAPSHOT'
description = 'ShipsForCore'
java.sourceCompatibility = JavaVersion.VERSION_16

publishing {
    publications {
        maven(MavenPublication) {
            groupId = project.group
            artifactId = project.name
            version = project.version

            from components.java
        }
    }
}
